<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="218dp"
        android:layout_height="191dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditScore">
        <!-- Text view: Id, Name, Age -->
        <TextView
            android:id="@+id/tvScoreRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="10sp"
            android:text="@string/score_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp" />
    </ScrollView>

    <TextView
        android:id="@+id/txtSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddScore"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSubjectEntry" />

    <Button
        android:id="@+id/btnEditScore"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddScore" />

    <Button
        android:id="@+id/btnDeleteScore"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_score"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteDB"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="36dp"
        android:text="@string/score"
        app:layout_constraintStart_toEndOf="@+id/txtSubject"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSubjectEntry"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubject"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editScoreEntry"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/score"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editSubjectEntry"
        app:layout_constraintTop_toBottomOf="@+id/txtScore"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnDeleteDB"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E32020"
        android:text="@string/delete_database"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="238dp"
        android:layout_height="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>